--- a/src/index4.html
+++ b/src/index4.html
@@ -12,7 +12,7 @@
     <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">氣象海情</h5>
+          <h5 class="modal-title" id="exampleModalLabel">海情海象</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -122,13 +122,13 @@
     <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">網站宣言</h5>
+          <h3 class="modal-title TealBlue" id="exampleModalLabel">網站宣言</h3>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <div class="row opacity mt-2">
+          <div class="row">
             <div class="col-12">
-              <div class="my-3 p-2 bg-light rounded">
+              <div class="my-3 p-2 rounded">
                 <p>本系統係為便利一般民眾單站視覺化查詢海域遊憩活動相關規定，所呈現之法規、公告資料為各主管機關、各縣市政府所提供資料彙整而得，因各主管機關、各縣市資料建置時間之差異及建檔品質，與實際公告或有不同，實際內容仍依各主管機關、各縣市政府公告為準。使用者不得將本系統所提供之資料內容或查詢結果作為任何形式之依據或主張，本會對於所有資料內容之正確性及完整性，皆不負擔保之責。使用者如因使用本系統之資料而受損害或損失，或因此導致使用者或第三人遭受損害或損失而遭求償者，本系統管理機關及各資料提供機關不負任何賠償或補償之責。
                 若屬全面性禁止事項或禁止採捕海域動、植物，例如海洋保育署公告之保育物種、漁業署公告之禁用漁法或禁止採捕魚種，即使沒在個別海域之法令中敘述，仍屬應遵守之規定。使用者進入本系統，視同同意上開使用規範。本系統所有資料僅限正常查詢、瀏覽使用，未經本會同意之大量抄錄或複製資料行為，將依違反著作權法及妨礙電腦使用罪辦理。
                 </p>
@@ -139,18 +139,17 @@
       </div>
     </div>
   </div>
-  <!-- Modal4 相關連結-->
+  <!-- Modal4 活動申請-->
   <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">相關連結</h5>
+          <h3 class="modal-title TealBlue" id="exampleModalLabel">活動申請</h3>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <div class="row opacity mt-2 py-2">
+          <div class="row">
             <div class="col-12">
-              <h3 class="TealBlue">活動申請</h3>
               <h5 class="text-justify">為提供民眾方便友善之橫向連結資訊，目前提供相關磯釣活動申請、遊艇申辦服務流程說明、龜山島登島申請與台江公園國家水域等海灣活動需提供申請之流程
               </h5>
             </div>
@@ -218,9 +217,36 @@
               </div>
             </div>
           </div>
-          <div class="row opacity mt-2 py-2">
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal5 活動布告欄-->
+  <div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 class="modal-title TealBlue">活動布告欄</h3>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p><a href="https://www.sow.org.tw/faq/myiccday" class="tooltip-test" title="Tooltip" target="_blank">天天都是你的國際淨灘行動 請一起這樣愛海洋</a></p>
+          <p><a href="https://www.cga.gov.tw/GipOpen/wSite/ct?xItem=141399&ctNode=650&mp=999" class="tooltip-test" title="Tooltip" target="_blank">海巡偕同師生淨灘，攜手恢復海灘樣貌</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal6 相關連結-->
+  <div class="modal fade" id="exampleModal6" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 class="modal-title TealBlue" id="exampleModalLabel">相關連結</h3>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row">
             <div class="col-12">
-              <h3 class="TealBlue">相關連結</h3>
               <h5 class="text-justify">
                 提供漁船管理辦法、賞鯨指南PDF、藍色公路
               </h5>
@@ -323,130 +349,123 @@
       </div>
     </div>
   </div>
-  <!-- Modal5 活動布告欄-->
-  <div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">活動布告欄</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p><a href="https://www.sow.org.tw/faq/myiccday" class="tooltip-test" title="Tooltip" target="_blank">天天都是你的國際淨灘行動 請一起這樣愛海洋</a></p>
-          <p><a href="https://www.cga.gov.tw/GipOpen/wSite/ct?xItem=141399&ctNode=650&mp=999" class="tooltip-test" title="Tooltip" target="_blank">海巡偕同師生淨灘，攜手恢復海灘樣貌</a></p>
+  <header class="wrapper-top wrapper-middle">
+    <div class="container">
+      <div class="row">
+        <a href="#" class="col-12 text-center navbar-brand Alabaster py-lg-3 d-flex justify-content-center align-items-center">
+          <img src="./img/LOGO.png" class="d-inline-block align-top logo">
+          <img src="./img/logoOCA.png" class="oca ms-3">
+        </a>
+      </div>
+      <div class="row row-cols-auto justify-content-center">
+        <div class="col">
+          <div class="dropdown">
+            <div class="btn-group">
+              <button class="btn2 btn-lg dropdown-toggle OrchidPurple" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="buttontext">
+              </button>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item active tab" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">網站宣言</a>
+                </li>
+                <li>
+                  <a class="dropdown-item tab" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal5">活動布告欄</a>
+                </li>
+                <li>
+                  <a class="dropdown-item tab" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal6">相關連結</a>
+                </li>
+                <li>
+                  <a class="dropdown-item tab" href="https://docs.google.com/forms/d/e/1FAIpQLScf7at41snW4-ZczKN3p2hR8M9VKj_Af82BWEsZg6uPfwnY3Q/viewform" target="_blank">意見回饋</a>
+                </li>
+                <li>
+                  <a class="dropdown-item tab" href="./res/109_12_一站式_使用說明_V1.1.pdf" target="_blank">使用說明(PDF)</a>
+                </li>
+                <li>
+                  <a class="dropdown-item tab" href="map.html">進入完整圖台</a>
+                </li>
+                <li>
+                  <a class="dropdown-item tab" href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊">海況影像</a>
+                </li>
+              </ul>
+            </div>
+          </div>					
         </div>
       </div>
-    </div>
-  </div>
-<div class="wrapper">
-  <header class="container">
-    <div class="row">
-      <a href="#" class="col-12 text-center navbar-brand Alabaster py-lg-3 d-flex justify-content-center align-items-center">
-        <img src="./img/LOGO.png" class="d-inline-block align-top logo">
-        <img src="./img/logoOCA.png" class="oca ms-3">
-      </a>
+      <div class="row row-cols-auto mb-2 justify-content-center nav-bar">
+        <div class="col" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+          <button class="btn OrchidPurple scoll">網站宣言</button>
+        </div>
+        <div class="col" data-bs-toggle="modal" data-bs-target="#exampleModal5">
+          <button class="btn OrchidPurple scoll">活動布告欄</button>
+        </div>
+        <div class="col" data-bs-toggle="modal" data-bs-target="#exampleModal6">
+          <button class="btn OrchidPurple scoll">相關連結</button>
+        </div>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScf7at41snW4-ZczKN3p2hR8M9VKj_Af82BWEsZg6uPfwnY3Q/viewform" class="col" target="_blank">
+          <button class="btn OrchidPurple scoll">意見回饋</button>
+        </a>
+        <a href="./res/109_12_一站式_使用說明_V1.1.pdf" class="col" target="_blank">
+          <button class="btn OrchidPurple scoll">使用說明(PDF)</button>
+        </a>
+        <div class="col">
+          <a href="map.html">
+            <button class="btn OrchidPurple scoll">進入圖台</button>
+          </a>
+        </div>
+        <div class="col">
+          <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊">
+            <button class="btn OrchidPurple scoll">海況影像</button>
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <p class="marquee">
+          <span class="py-1 px-2 rounded-pill">
+            海上颱風警報:預測颱風的七級風暴風範圍可能侵襲台灣或金門、馬袓陸上時之前18小時，即發布「海上陸上颱風警報」。之後每隔1小時發布一次，必要時得加發之。
+          </span>
+        </p>
+      </div>
     </div>
   </header>
-  <div class="container">
-    <div class="row">
-      <p class="marquee">
-        <span class="py-1 px-2 rounded-pill mb-2">
-          海上颱風警報:預測颱風的七級風暴風範圍可能侵襲台灣或金門、馬袓陸上時之前18小時，即發布「海上陸上颱風警報」。之後每隔1小時發布一次，必要時得加發之。
-        </span>
-      </p>
-    </div>
-    <div class="row row-cols-auto justify-content-center">
-      <div class="col">
-        <div class="dropdown">
-          <div class="btn-group">
-            <button class="btn2 btn-lg dropdown-toggle SeaSerpent mb-2" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="buttontext">
-            </button>
-            <ul class="dropdown-menu">
-              <li>
-                <a class="dropdown-item active tab" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">網站宣言</a>
-              </li>
-              <li>
-                <a class="dropdown-item tab" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal5">活動布告欄</a>
-              </li>
-              <li>
-                <a class="dropdown-item tab" href="https://docs.google.com/forms/d/e/1FAIpQLScf7at41snW4-ZczKN3p2hR8M9VKj_Af82BWEsZg6uPfwnY3Q/viewform" target="_blank">意見回饋</a>
-              </li>
-              <li>
-                <a class="dropdown-item tab" href="./res/109_12_一站式_使用說明_V1.1.pdf" target="_blank">使用說明(PDF)</a>
-              </li>
-              <li>
-                <a class="dropdown-item tab" href="map.html">進入完整圖台</a>
-              </li>
-              <li>
-                <a class="dropdown-item tab" href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊">海況影像</a>
-              </li>
-            </ul>
+  <div class="wrapper wrapper-baseline">
+    <div class="container">
+      <div class="row main row-cols-3 row-cols-sm-2 row-cols-md-3 row-cols-lg-5">
+        <a href="" class="col p-3 d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#exampleModal4">
+          <div class="my-3 my-lg-2 OrchidPurple">
+            <img class="section-item-icon" src="./img/leading_page/newspaper.svg">
           </div>
-        </div>					
-      </div>
-    </div>
-    <div class="row row-cols-auto mt-2 nav-bg">
-      <div class="col" data-bs-toggle="modal" data-bs-target="#exampleModal3">
-        <button class="btn TealBlue scoll">網站宣言</button>
-      </div>
-      <div class="col" data-bs-toggle="modal" data-bs-target="#exampleModal5">
-        <button class="btn TealBlue scoll">活動布告欄</button>
-      </div>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLScf7at41snW4-ZczKN3p2hR8M9VKj_Af82BWEsZg6uPfwnY3Q/viewform" class="col" target="_blank">
-        <button class="btn TealBlue scoll">意見回饋</button>
-      </a>
-      <a href="./res/109_12_一站式_使用說明_V1.1.pdf" class="col" target="_blank">
-        <button class="btn TealBlue scoll">使用說明(PDF)</button>
-      </a>
-      <div class="col">
-        <a href="map.html">
-          <button class="btn TealBlue scoll">進入完整圖台</button>
+          <button class="btn Lotion">活動申請</button>
+        </a>
+        <a href="https://rocean.oac.gov.tw/" class="col p-3 d-flex justify-content-center align-items-center" target="_blank">
+          <div class="my-3 my-lg-2 OrchidPurple">
+            <img class="section-item-icon" src="./img/leading_page/location.svg">
+          </div>
+          <button class="btn Lotion">法令資訊</button>
+        </a>
+        <a href="https://demo.chuanhwa.com.tw/oac/layout-demo/" class="col p-3 d-flex justify-content-center align-items-center" target="_blank">
+          <div class="my-3 my-lg-2 OrchidPurple">
+            <img class="section-item-icon" src="./img/leading_page/recreation.png">
+          </div>
+          <button class="btn Lotion">遊憩查詢</button>
+        </a>
+        <a href="" class="col p-3 d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+          <div class="my-3 my-lg-2 OrchidPurple">
+            <img class="section-item-icon" src="./img/leading_page/waves.svg">
+          </div>
+          <button class="btn Lotion">海情海象</button>
+        </a>
+        <a href="https://demo.chuanhwa.com.tw/oac/layout-demo/" class="col p-3 d-flex justify-content-center align-items-center" target="_blank">
+          <div class="my-3 my-lg-2 OrchidPurple">
+            <img class="section-item-icon" src="./img/leading_page/warning.svg">
+          </div>
+          <button class="btn Lotion">
+            射擊通報
+          </button>
         </a>
       </div>
-      <div class="col">
-        <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=海情/海象資訊">
-          <button class="btn TealBlue scoll">海況影像</button>
-        </a>
-      </div>
-    </div>
-    <div class="row mt-2 main row-cols-3 row-cols-sm-2 row-cols-md-3 row-cols-lg-5">
-      <a href="" class="col p-3 d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#exampleModal4">
-        <div class="my-3 my-lg-2 TealBlue">
-          <img class="section-item-icon" src="./img/leading_page/newspaper.svg">
-        </div>
-        <button class="btn Lotion">活動申請</button>
-      </a>
-      <a href="https://rocean.oac.gov.tw/oacmap/map?loc=22.33793330994558,120.30200958251955,12" class="col p-3 d-flex justify-content-center align-items-center" target="_blank">
-        <div class="my-3 my-lg-2 TealBlue">
-          <img class="section-item-icon" src="./img/leading_page/location.svg">
-        </div>
-        <button class="btn Lotion">法令資訊</button>
-      </a>
-      <a href="https://demo.chuanhwa.com.tw/oac/layout-demo/" class="col p-3 d-flex justify-content-center align-items-center" target="_blank">
-        <div class="my-3 my-lg-2 TealBlue">
-          <img class="section-item-icon" src="./img/leading_page/recreation.png">
-        </div>
-        <button class="btn Lotion">遊憩查詢</button>
-      </a>
-      <a href="" class="col p-3 d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#exampleModal2">
-        <div class="my-3 my-lg-2 TealBlue">
-          <img class="section-item-icon" src="./img/leading_page/waves.svg">
-        </div>
-        <button class="btn Lotion">氣象海情</button>
-      </a>
-      <a href="https://demo.chuanhwa.com.tw/oac/layout-demo/" class="col p-3 d-flex justify-content-center align-items-center" target="_blank">
-        <div class="my-3 my-lg-2 TealBlue">
-          <img class="section-item-icon" src="./img/leading_page/warning.svg">
-        </div>
-        <button class="btn Lotion">
-          射擊通報
-        </button>
-      </a>
     </div>
   </div>
-</div>
 
-<footer class="container text-center mt-2 footer rounded-3">
+<footer class="container text-center footer rounded-3">
   <div class="row opacity pt-3 rounded-3">
     <h6 class="col-12 col-sm-4 col-lg-2">&copy海洋委員會</h6>
     <h6 class="col-12 col-sm-8 col-lg-4">高雄市前鎮區成功二路25號4樓</h6>
